<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Reminder</string>
    <string name="edit_reminder_title">Task Reminder - Edit</string>
    <string name="no_reminders">No Reminders Yet</string>
    <string name="menu_insert">Add Reminder</string>
    <string name="menu_delete">Delete Reminder</string>
  	<string name="menu_settings">Settings</string>
    <string name="title">Title</string>
    <string name="body">Message</string>
    <string name="confirm">Save</string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="date">Reminder Date</string>
    <string name="time">Reminder Time</string>
    
    <!-- Toasts -->
    <string name="task_saved_message">Task has been saved</string>
    
    <!-- Notification Bar -->
    <string name="notify_new_task_message">A task needs to be reviewed!</string>
    <string name="notify_new_task_title">Task Reminder!</string>
    
    <!-- Preferences -->
    <string name="pref_category_task_defaults_key">task_default_category</string>
	<string name="pref_category_task_defaults_title">Task Title Default</string>
	<string name="pref_task_title_key">default_reminder_title</string>
	<string name="pref_task_title_dialog_title">Default Reminder Title</string>
	<string name="pref_task_title_message">The default title for a reminder.</string>
	<string name="pref_task_title_summary">Default title for reminders.</string>
	<string name="pref_task_title_title">Default Reminder Title</string>
    
    <string name="pref_category_datetime_key">date_time_default_category</string>
    <string name="pref_category_datetime_title">Date Time Defaults</string>
    <string name="pref_default_time_from_now_key">time_from_now_default</string>
    <string name="pref_default_time_from_now_dialog_title">Time From Now</string>
    <string name="pref_default_time_from_now_message">The default time from now that a new reminder should be set to.</string>
	<string name="pref_default_time_from_now_summary">Sets the default time for a reminder.</string>
	<string name="pref_default_time_from_now_title">Default Reminder Time</string>
	
	
	
    <string name="preferences_name">Birthday Reminder Preferences</string>

    <string name="knownBirthdays">Next birthdays</string>
    <string name="unknownBirthdays">Birthdays unknown</string>
    <string name="contextMenuTitle">Date of birth</string>
    <string name="contextMenu_create">create</string>
    <string name="contextMenu_edit">edit</string>
    <string name="contextMenu_delete">delete</string>
    <string name="dialogTitle">Date of birth</string>
    <string name="summary_today">turns %d today</string>
    <string name="summary_tomorrow">turns %d tomorrow</string>
    <string name="summary_other">turns %2$d in %1$d days</string>
    <string name="notificationText_today">today: %s</string>
    <string name="notificationText_tomorrow">tomorrow: %s</string>
    <string name="notificationText_other">in %1$d days: %2$s</string>

    <plurals name="notificationTitle">
        <item quantity="one">%d Birthday</item>
        <item quantity="other">%d Birthdays</item>
    </plurals>

    <string name="preferences">Settings</string>
    <string name="quit">Quit service</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="account_icon">account icon</string>
    <string name="add_date_of_birth">add date of birth</string>
    <string name="new_birthday">+</string>
    <string name="editor_phone">Phone</string>
    
    
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
     
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Birthday</item>
        <item >Tasks</item>
        <item >News</item>
        <item >Grocery</item>
        <item >Good Deals</item>
        <item >Weather</item>
    </string-array>
     
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>
     
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    

	
</resources>
