<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
	xmlns:android="http://schemas.android.com/apk/res/android" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_marginTop="2dp"
	    android:orientation="vertical"
	    android:padding="30dp" >

	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_marginTop="2dp"
	        android:text="@string/title"
	        
	        android:textSize="20dp" />

	    <EditText
	        android:id="@+id/title"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_marginTop="2dp" />

	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_marginTop="5dp"
	        android:text="@string/body"
	        android:textSize="20dp" />

	    <EditText
	        android:id="@+id/body"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_marginTop="2dp"
	        android:gravity="top"
	        android:minLines="3"
	        android:scrollbars="vertical" />

	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_marginTop="5dp"
	        android:text="@string/date"
	        
	        android:textSize="20dp" />

	    <Button
	        android:id="@+id/reminder_date"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_marginTop="5dp" />

	    <TextView
	        android:layout_width="wrap_content"
	        android:id="@+id/textView4"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_marginTop="5dp"
	        android:text="@string/time"
	        
	        android:textSize="20dp" />

	    <Button
	        android:id="@+id/reminder_time"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_marginTop="2dp" />

	    <Button
	        android:id="@+id/confirm"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_marginTop="20dp"
	        android:background="@drawable/colors"
	        android:text="@string/confirm"
	        android:textColor="#FFFFFF" />

	</LinearLayout>

</ScrollView>